Fix z-index issue with navbar

--- a/flaskr/static/blog.css
+++ b/flaskr/static/blog.css
@@ -18,7 +18,7 @@
 .blog-title-container {
   cursor: pointer;
   position: relative;
-  z-index: 99;
+  z-index: 2;
 }
 
 .blog-title-container:hover {
